# grounded_videoqa

./: README.md  environment.yml  pyproject.toml
configs/: experiment.template.yaml
docs/: project_guidlines.md  proposal.tex
docs/report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
outputs/dry_run/candidates/: tvqa_train.candidates.jsonl  tvqa_train.visual.jsonl  tvqa_train.visual_features.jsonl
outputs/dry_run/model_relative_linear_vs_frozen/: per_example.jsonl  summary.json
outputs/dry_run/normalized/: tvqa_train.normalized.jsonl
outputs/dry_run/outputs/: fixed_budget_hybrid_frozen.summary.json  fixed_budget_hybrid_lexical.predictions.jsonl  fixed_budget_hybrid_lexical.summary.json  (+4 more)
scripts/: README.md  aggregate_run_summaries.py  build_candidate_pool.py  export_oracle_traces.py  extract_clip_features.py  materialize_visual_evidence.py  prepare_nextgqa.py  prepare_tvqa.py  prepare_tvqa_plus.py  run_fixed_budget_baseline.py  run_model_relative_study.py  run_multigpu_pipeline.sh  run_nextgqa_experiment.sh  run_sequential_policy.py  train_answerer.py  train_policy.py
src/adaptive_evidence_vqa/: __init__.py  __main__.py  cli.py  config.py  schemas.py  utils.py
src/adaptive_evidence_vqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aggregate.py  test_answerer.py  test_candidate_pool.py  test_evidence_records.py  test_metrics.py  test_oracle.py  test_policy.py  test_preprocess.py  test_retrieval.py  test_visual_features.py  test_visual_materialization.py
(+30 files in other folders)
